# mobile-api

./: .gitignore  README.md  openapi-schema.yaml  pyproject.toml
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_offlineorder.py  0003_alter_category_image_alter_course_content_and_more.py  0004_alter_course_type_of_course.py  0005_alter_course_type_of_course.py  0006_alter_question_sort.py  0007_alter_category_options.py
config/: settings.py  urls.py
